--- a/assg3/a3.vcxproj.filters
+++ b/assg3/a3.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClInclude Include="test.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FluidProperties.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Fluid.glsl">
